@@ -1,6 +1,5 @@
 package com.kt.common;
 
-
 import static com.epages.restdocs.apispec.ResourceDocumentation.resource;
 import static org.springframework.restdocs.operation.preprocess.Preprocessors.preprocessRequest;
 import static org.springframework.restdocs.operation.preprocess.Preprocessors.preprocessResponse;
@@ -16,6 +15,9 @@ import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.springframework.restdocs.mockmvc.RestDocumentationRequestBuilders;
@@ -25,12 +27,20 @@ import org.springframework.restdocs.payload.JsonFieldType;
 import org.springframework.restdocs.payload.PayloadDocumentation;
 import org.springframework.stereotype.Component;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
+import org.springframework.util.LinkedMultiValueMap;
+import org.springframework.util.MultiValueMap;
 
+/**
+ * RestDocs + restdocs-api-spec 연동을 위한 공통 팩토리 클래스
+ * - MockMvc 요청 빌더
+ * - 요청/응답 스키마 + 필드 자동 생성
+ */
 @Component
 public class RestDocsFactory {
 
-	// ========== Request Builder ==========
-
+	/**
+	 * HTTP 메서드, URL, 바디에 맞는 MockMvc 요청 생성
+	 */
 	public MockHttpServletRequestBuilder createRequest(
 		String url,
 		Object requestDto,
@@ -44,6 +54,44 @@ public class RestDocsFactory {
 			: "";
 
 		return buildRequest(url, content, method, pathParams);
+	}
+
+	/**
+	 * GET + QueryString 전용 요청 빌더
+	 * - dto 를 쿼리 파라미터로 변환해서 붙여줌
+	 * - Pageable 도 같이 받으면 page/size/sort 도 자동 추가
+	 */
+	public MockHttpServletRequestBuilder createParamRequest(
+		String url,
+		Object queryDto,                 // 검색 조건 DTO (ex. SearchCond)
+		Pageable pageable,              // PageRequest.of(...)
+		ObjectMapper objectMapper,
+		Object... pathParams
+	) {
+		MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
+
+		// 검색 조건 DTO → 쿼리 스트링
+		if (queryDto != null) {
+			params.addAll(
+				MultiValueMapConverter.convert(objectMapper, queryDto)
+			);
+		}
+
+		// 2) Pageable → page / size / sort
+		if (pageable != null) {
+			params.add("page", String.valueOf(pageable.getPageNumber()));
+			params.add("size", String.valueOf(pageable.getPageSize()));
+
+			pageable.getSort().forEach(order -> {
+				String sortParam = order.getProperty() + "," + order.getDirection().name();
+				params.add("sort", sortParam); // ex) sort=createdAt,DESC
+			});
+		}
+
+		// GET 요청 빌더 생성
+		return RestDocumentationRequestBuilders.get(url, pathParams)
+			.params(params)
+			.accept(MediaType.APPLICATION_JSON);
 	}
 
 	private MockHttpServletRequestBuilder buildRequest(
@@ -81,7 +129,9 @@ public class RestDocsFactory {
 		};
 	}
 
-	// ========== Success Resource (단건) ==========
+	// ========================================================================
+	// Success Resource (단건)
+	// ========================================================================
 
 	/**
 	 * 성공 케이스용 공통 문서 생성
@@ -141,14 +191,24 @@ public class RestDocsFactory {
 		);
 	}
 
-	// ========== Field 자동 생성 ==========
+	// ========================================================================
+	// Field 자동 생성
+	// ========================================================================
 
+	/**
+	 * DTO 구조를 기반으로 JsonFieldDescriptor 배열을 생성
+	 */
 	public <T> FieldDescriptor[] getFields(T dto) {
 		List<FieldDescriptor> fields = new ArrayList<>();
 		generateFieldDescriptors(dto, "", fields);
 		return fields.toArray(new FieldDescriptor[0]);
 	}
 
+	/**
+	 * 리플렉션으로 필드를 순회하며 필드/서브필드를 자동 문서화
+	 * - Map 타입(nodesById 등)은 subsection으로만 문서화하고 내부 키는 스키마에서 제외
+	 * - page, slice 같은 필드는 optional 로 선언하여 JSON에 없어도 에러가 나지 않도록 처리
+	 */
 	private <T> void generateFieldDescriptors(T dto, String pathPrefix, List<FieldDescriptor> fields) {
 		if (dto == null || isSimpleType(dto)) {
 			return;
@@ -159,26 +219,41 @@ public class RestDocsFactory {
 			field.setAccessible(true);
 			String fieldPath = pathPrefix + field.getName();
 			Object fieldValue = getFieldValue(dto, field);
-			JsonFieldType fieldType = determineFieldType(field.getType(), fieldValue);
+			Class<?> fieldTypeClass = field.getType();
+
+			// Map 타입(nodesById 등)은 동적 키를 가지므로 subsection으로만 문서화
+			if (fieldValue instanceof Map<?, ?> || Map.class.isAssignableFrom(fieldTypeClass)) {
+				FieldDescriptor descriptor = PayloadDocumentation
+					.subsectionWithPath(fieldPath)
+					.type(JsonFieldType.OBJECT)
+					.description(field.getName())
+					.optional();
+
+				fields.add(descriptor);
+				continue;
+			}
+
+			JsonFieldType fieldType = determineFieldType(fieldTypeClass, fieldValue);
 
 			FieldDescriptor descriptor = PayloadDocumentation.fieldWithPath(fieldPath)
 				.type(fieldType)
 				.description(field.getName())
-				.optional(); // ★ 여기! page, slice 같은 필드가 JSON에 없어도 허용
+				.optional(); // page, slice 같은 필드가 JSON에 없어도 허용
 
 			fields.add(descriptor);
 
 			// 리스트 타입 처리
-			if (fieldType == JsonFieldType.ARRAY && fieldValue instanceof List<?> list) {
-				if (!list.isEmpty()) {
-					Object firstElement = list.getFirst();
-					generateFieldDescriptors(firstElement, fieldPath + "[].", fields);
-				}
+			if (fieldType == JsonFieldType.ARRAY && fieldValue instanceof List<?> list && !list.isEmpty()) {
+				Object firstElement = list.get(0);
+				generateFieldDescriptors(firstElement, fieldPath + "[].", fields);
 			}
 
-			// 오브젝트 타입 처리
+			// 오브젝트 타입 처리 (Map은 위에서 처리했으니 제외)
 			if (fieldType == JsonFieldType.OBJECT && fieldValue != null) {
-				generateFieldDescriptors(fieldValue, fieldPath + ".", fields);
+				// java.* 타입(예: LocalDate, List, Map 등)은 isSimpleType에서 filter
+				if (!isSimpleType(fieldValue)) {
+					generateFieldDescriptors(fieldValue, fieldPath + ".", fields);
+				}
 			}
 		}
 	}
@@ -191,46 +266,63 @@ public class RestDocsFactory {
 		}
 	}
 
-    private boolean isSimpleType(Object dto) {
-        if (dto == null) return true;
+	/**
+	 * 더 이상 필드를 파고들지 않을 단순 타입 여부 판단
+	 * - 원시 타입, enum
+	 * - java.* 패키지 타입들 (List, Map, LocalDate 등)
+	 * - String, Number, Boolean
+	 */
+	private boolean isSimpleType(Object dto) {
+		if (dto == null) {
+			return true;
+		}
 
-        Class<?> type = dto.getClass();
+		Class<?> type = dto.getClass();
 
-        // 원시 타입, enum
-        if (type.isPrimitive() || type.isEnum()) {
-            return true;
-        }
+		// 원시 타입, enum
+		if (type.isPrimitive() || type.isEnum()) {
+			return true;
+		}
 
-        // JDK 타입들(java.*)은 더 이상 안 파고 든다 (Class, Module, Map, List, LocalDate 등)
-        Package pkg = type.getPackage();
-        if (pkg != null && pkg.getName().startsWith("java.")) {
-            return true;
-        }
+		// JDK 타입들(java.*)은 더 이상 안 파고 든다 (Class, Module, Map, List, LocalDate 등)
+		Package pkg = type.getPackage();
+		if (pkg != null && pkg.getName().startsWith("java.")) {
+			return true;
+		}
 
-        // 기본 wrapper / 문자열
-        return dto instanceof String
-                || dto instanceof Number
-                || dto instanceof Boolean;
-    }
+		// 기본 wrapper / 문자열
+		return dto instanceof String
+			|| dto instanceof Number
+			|| dto instanceof Boolean;
+	}
 
+	/**
+	 * 필드 타입을 JsonFieldType으로 매핑
+	 */
 	private JsonFieldType determineFieldType(Class<?> fieldType, Object fieldValue) {
 		if (fieldValue instanceof List<?>) {
 			return JsonFieldType.ARRAY;
 		}
-		if (fieldType == String.class || fieldType.isEnum()) {
-			return JsonFieldType.STRING;
-		} else if (Boolean.class.isAssignableFrom(fieldType) || fieldType == boolean.class) {
-			return JsonFieldType.BOOLEAN;
-		} else if (Number.class.isAssignableFrom(fieldType) || fieldType.isPrimitive()) {
-			return JsonFieldType.NUMBER;
-		} else if (List.class.isAssignableFrom(fieldType)) {
-			return JsonFieldType.ARRAY;
-		} else if (fieldType == LocalDate.class
-                || fieldType == LocalDateTime.class
-                || fieldType == LocalTime.class) {
-            return JsonFieldType.STRING;
-        } else {
+		if (Map.class.isAssignableFrom(fieldType)) {
 			return JsonFieldType.OBJECT;
 		}
+		if (fieldType == String.class || fieldType.isEnum()) {
+			return JsonFieldType.STRING;
+		}
+		if (Boolean.class.isAssignableFrom(fieldType) || fieldType == boolean.class) {
+			return JsonFieldType.BOOLEAN;
+		}
+		if (Number.class.isAssignableFrom(fieldType) || fieldType.isPrimitive()) {
+			return JsonFieldType.NUMBER;
+		}
+		if (List.class.isAssignableFrom(fieldType)) {
+			return JsonFieldType.ARRAY;
+		}
+		if (fieldType == LocalDate.class
+			|| fieldType == LocalDateTime.class
+			|| fieldType == LocalTime.class) {
+			return JsonFieldType.STRING;
+		}
+		return JsonFieldType.OBJECT;
 	}
 }
